--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Project Context
-server.servlet.context-path=/rlsp_shoponline_db
+server.servlet.context-path=/ecommerce
 
 # Upload Properties
 spring.servlet.multipart.enabled=true
@@ -33,7 +33,7 @@ server.http2.enabled=true
 
 # Encoding
 server.servlet.encoding.enabled=true
-server.servlet.encoding.charset=UTF-16
+server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 server.servlet.encoding.force-request=true
 server.servlet.encoding.force-response=true
@@ -43,7 +43,7 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 # How long a client will wait for a connection (1000 miliseconds = 1 second)
 spring.datasource.hikari.connection-timeout=20000 
 # quantity of connection when in idle state
-spring.datasource.hikari.minimum-idle=200
+spring.datasource.hikari.minimum-idle=20
 # max quantity of active connections
 spring.datasource.hikari.maximum-pool-size=550
 # Idle time for each connection (1000 miliseconds = 1 second)
@@ -52,7 +52,7 @@ spring.datasource.hikari.pool-name=PollHikari
 # Process into the DB
 spring.datasource.dbcp2.pool-prepared-statements=true
 # Number maximum of connections open and ready to connect
-spring.datasource.dbcp2.max-open-prepared-statements=200
+spring.datasource.dbcp2.max-open-prepared-statements=20
 
 # Not save automatically into the DB ( SpringData will do that)
 spring.datasource.hikari.auto-commit=false
