--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       POSTGRES_USER: postgres # The PostgreSQL user (useful to connect to the database)
       POSTGRES_PASSWORD: postgres # The PostgreSQL password (useful to connect to the database)
       POSTGRES_DB: rlsp_shoponline_db # The PostgreSQL default database (automatically created at first launch)
+      PGDATA: /tmp
 
     volumes:
       - ./db-data/:/var/lib/postgresql/data/
