--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,21 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- JWT Setup - Token para autenticacao na API -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>5.6.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.6.1</version>
+        </dependency>
+
+
+
         <!-- JUNIT -->
         <dependency>
             <groupId>junit</groupId>
