--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,13 @@
     <description>ecommerce_springboot_example</description>
     <properties>
         <java.version>11</java.version>
+        <log4j-core.version>2.17.1</log4j-core.version>
         <junit.version>4.13.2</junit.version>
         <jackson.version>2.13.1</jackson.version>
         <flyway.version>7.3.1</flyway.version>
+        <spring-security-web.version>5.6.1</spring-security-web.version>
+        <spring-security-config.version>5.6.1</spring-security-config.version>
+        <jjwt.version>0.9.0</jjwt.version>
     </properties>
 
     <dependencies>
@@ -64,15 +68,28 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>5.6.1</version>
+            <version>${spring-security-web.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version>5.6.1</version>
+            <version>${spring-security-config.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jjwt.version}</version>
+        </dependency>
+
+
+        <!-- LOG4J -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j-core.version}</version>
+        </dependency>
 
 
         <!-- JUNIT -->
