--- a/src/main/resources/application-ut.properties
+++ b/src/main/resources/application-ut.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/rlsp_shoponline_db?autore
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=postgresql
 spring.sql.init.platform=postgres
 
@@ -75,10 +75,10 @@ spring.session.jdbc.cleanup-cron= 0 0 4 * * *
 spring.mvc.static-path-pattern=/resources/static/**
 
 ####  FLYWAY ####
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-version=2
+spring.flyway.baseline-version=1
 spring.flyway.sql-migration-prefix=V
 spring.flyway.sql-migration-separator=__
 spring.flyway.sql-migration-suffixes=.sql
