Fix error on testRegistrerUserSystem()

--- a/src/main/resources/application-ut.properties
+++ b/src/main/resources/application-ut.properties
@@ -8,6 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=postgresql
 spring.sql.init.platform=postgres
+spring.jpa.show-sql=true
 
 ## METADATA (DB properties)
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=true
