Add @JsonIgonre to fix app loop

--- a/src/main/resources/application-ut.properties
+++ b/src/main/resources/application-ut.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/rlsp_shoponline_db?autore
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=postgresql
 spring.sql.init.platform=postgres
 spring.jpa.show-sql=true
