Add JavaxMail on pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,14 @@
             <version>${flyway.version}</version>
         </dependency>
 
+        <!-- EMAIL JAVA -->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
