--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <name>ecommerce_springboot_example</name>
     <description>ecommerce_springboot_example</description>
     <properties>
+        <spring.validation.version>2.6.6</spring.validation.version>
         <java.version>11</java.version>
         <log4j-core.version>2.17.1</log4j-core.version>
         <junit.version>4.13.2</junit.version>
@@ -48,6 +49,14 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${spring.validation.version}</version>
+        </dependency>
+
+        <!-- POSTGRESQL -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
