EndPoints natural and legal person working with counter for each endpoint access.

--- a/src/main/resources/application-pr.properties
+++ b/src/main/resources/application-pr.properties
@@ -73,3 +73,5 @@ spring.session.jdbc.cleanup-cron= 0 0 4 * * *
 
 # Say to Spring Security we're gonna use the images/js/css on that folder
 spring.mvc.static-path-pattern=/resources/static/**
+
+spring.jackson.serialization.fail-on-self-references=false
