--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,12 @@
             <version>1.6.7</version>
         </dependency>
 
+        <!-- Commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
 
     </dependencies>
 
