--- a/src/main/resources/application-ut.properties
+++ b/src/main/resources/application-ut.properties
@@ -84,3 +84,5 @@ spring.flyway.sql-migration-prefix=V
 spring.flyway.sql-migration-separator=__
 spring.flyway.sql-migration-suffixes=.sql
 spring.flyway.mixed=true
+
+spring.jackson.serialization.fail-on-self-references=false
