--- a/pom.xml
+++ b/pom.xml
@@ -124,12 +124,6 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-        </dependency>
-
-
 
         <!-- Flyway- Versionador de DB -->
         <dependency>
@@ -168,6 +162,7 @@
             <artifactId>jackson-xml-databind</artifactId>
             <version>0.6.2</version>
         </dependency>
+
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
@@ -177,8 +172,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.13.1</version>
-            <scope>test</scope>
+            <version>2.15.0-rc2</version>
         </dependency>
 
 
